[package]
name = "rusocks"
version = "1.7.2"
edition = "2021"
authors = ["Original authors of linksocks"]
description = "SOCKS5 over WebSocket proxy tool"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
clap = { version = "4.3", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.4"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
url = "2.4"
base64 = "0.21"
lazy_static = "1.4"